manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "dockertest-865d"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "dockertest-865d"
  template:
    metadata:
      labels:
        app: "dockertest-865d"
    spec:
      containers:
        - name: "dockertest-865d"
          image: "vknysh79one.azurecr.io/dockertest"
          ports:
          - containerPort: 80
